Aggiunti nuovi font e modificati file script e style

--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@ button {
 button:hover {
     background-color: #0069d9;
 }
+
+.nerko-one-regular {
+    font-family: "Nerko One", cursive;
+    font-weight: 400;
+    font-style: normal;
+}  
